# agave-snapshot-gossip-client

./: .cursorignore  .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  TRADEOFFS.md  build.rs  example-config.toml
.github/: dependabot.yml
.github/workflows/: build-common.yml  build-trigger.yml  build.yml  debian.yml  docker.yml  invalidate-cache.yml  pr-build.yml  release.yml  test-debian.yml  test-docker.yml
debian/: changelog  control  default-config.toml  gossip-client.service  postinst  postrm  preinst  prerm  rules
docs/: INSTALL.md  crds-filtering-privacy-issue.md  deferred-verify.md  design-tradeoffs.md  gossip-client-optimization-notes.md  gossip_client_optimization_notes.md  light-gossip-mode-proposal.md  light_gossip_mode_proposal.md  rpc-only-mode.md
scripts/: download-latest-binary.sh  prepare-release.sh
scripts/test/: https_server.py
src/: atomic_state.rs  config.rs  constants.rs  gossip.rs  gossip_filter.rs  healthcheck.rs  http_proxy.rs  ip_echo.rs  lib.rs  local_storage.rs  main.rs  rpc.rs  scraper.rs  stun.rs  upnp.rs
testdata/: config_local.toml  config_proxy.toml  config_redirect.toml
