[package]
name = "agave-snapshot-gossip-client"
description = "Snapshot gossip client"
authors = ["Blockdaemon", "Nye Liu"]
version = "0.0.7"
edition = "2021"
repository = "https://github.com/Blockdaemon/agave-snapshot-gossip-client"
license = "Apache-2.0"

[[bin]]
name = "snapshot-gossip-client"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# upstream solana dependencies
solana-gossip = "~2"
solana-sdk = "~2"
solana-streamer = "~2"
solana-version = "~2"

# for http_proxy.rs
jsonrpc-http-server = "*"
# we're stuck here due to jsonrpc-http-server which is abandoned
hyper = { version = "~0.14", features = ["full"] }
# we're stuck here because of hyper 0.14
hyper-rustls = { version = "~0.23", features = ["native-tokio"] }

# Everything else
anyhow = "~1"
chrono = "*"
clap = { version = "~4", features = ["derive"] }
dns-lookup = "~2"
env_logger = "*"
get_if_addrs = "*"
igd = "*"
jsonrpc-core = "*"
lazy_static = "~1"
log = "*"
regex = "~1"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
rustls = "*"
serde = { version = "~1", features = ["derive"] }
serde_json = "*"
signal-hook = "*"
stun-client = "*"
tokio = { version = "~1", features = ["rt"] }
toml = "*"
url = "~2"

[build-dependencies]
anyhow = "*"
chrono = "*"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin"
]
