[package]
name = "agave-snapshot-gossip-client"
version = "0.1.7"
edition = "2021"
authors = ["Blockdaemon", "Nye Liu"]
description = "Snapshot gossip client"
license = "Apache-2.0"
repository = "https://github.com/Blockdaemon/agave-snapshot-gossip-client"

[lib]
name = "snapshot_gossip_client"
path = "src/lib.rs"

[[bin]]
name = "snapshot-gossip-client"
path = "src/main.rs"

[dependencies]
# upstream solana dependencies
solana-gossip = "~2"
solana-sdk = "~2"
solana-streamer = "~2"
solana-version = "~2"

# for rpc.rs, http_proxy.rs, and local_storage.rs
bytes = "~1"
axum = { version = "*", features = ["json"] }
http = "~1"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "*"
tokio-util = "*"

# Everything else
anyhow = "~1"
# FIXME: upgrade to 2.x?
bincode = "~1"
chrono = "*"
clap = { version = "~4", features = ["derive"] }
dns-lookup = "~2"
env_logger = "*"
get_if_addrs = "*"
hex = "*"
igd = "*"
lazy_static = "~1"
log = "*"
regex = "~1"
stun-client = "*"
tokio = { version = "~1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "fs", "time", "net"] }
toml = "*"

[build-dependencies]
anyhow = "*"
chrono = "*"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin"
]

[dev-dependencies]
snapshot_gossip_client = { path = ".", package = "agave-snapshot-gossip-client" }
axum-test = "*"
bs58 = "*"
hyper = "~1"
tempfile = "~3"
wiremock = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
