[package]
name = "agave-snapshot-gossip-client"
version = "0.2.1"
edition = "2021"
authors = ["Blockdaemon", "Nye Liu"]
description = "Snapshot gossip client"
license = "Apache-2.0"
repository = "https://github.com/Blockdaemon/agave-snapshot-gossip-client"

[lib]
name = "snapshot_gossip_client"
path = "src/lib.rs"

[[bin]]
name = "snapshot-gossip-client"
path = "src/main.rs"

[dependencies]
# upstream solana dependencies
solana-gossip = { version = "3", features = ["agave-unstable-api"] }
solana-hash = { version = "=3.0.0", features = ["serde"] }
solana-keypair = "*"
solana-serde = "*"
solana-signer = "*"
solana-streamer = "*"
solana-version = "*"
# Pin dependencies to 3.0.0 to use solana-hash 3.0.0 (matches solana-accounts-db requirement)
solana-sysvar = "=3.0.0"
solana-blake3-hasher = "=3.0.0"
solana-keccak-hasher = "=3.0.0"
solana-epoch-rewards-hasher = "=3.0.0"

# for rpc.rs, http_proxy.rs, and local_storage.rs
bytes = "~1"
axum = { version = "*", features = ["json"] }
http = "~1"
reqwest = { version = "*", default-features = false, features = ["json", "native-tls"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "*"
tokio-util = "*"

# Everything else
anyhow = "~1"
bincode = { version = "~2", features = ["serde"] }
chrono = "*"
clap = { version = "~4", features = ["derive"] }
dns-lookup = "~3"
env_logger = "*"
get_if_addrs = "*"
hex = "*"
home = "=0.5.11" # Rust 1.86.0
igd = "*"
lazy_static = "~1"
log = "*"
regex = "~1"
stun-client = "*"
tokio = { version = "~1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "fs", "time", "net"] }
toml = "*"

[build-dependencies]
anyhow = "*"
chrono = "*"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin"
]

[dev-dependencies]
snapshot_gossip_client = { path = ".", package = "agave-snapshot-gossip-client" }
axum-test = "*"
bs58 = "*"
hyper = "~1"
tempfile = "~3"
mockito = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
